fix: [진유진] resources 파일 경로 만들어주기 [WMD-3]

--- a/.github/workflows/wemeet-backend-ci.yml
+++ b/.github/workflows/wemeet-backend-ci.yml
@@ -20,6 +20,7 @@ jobs:
       # CI Test를 위한 application.properties 생성
       - name: create application for CI Test
         run: |
+          mkdir src/main/resources
           cd src/main/resources
           echo "${{ secrets.DEVELOPMENT_CI_CONFIG }}" >> application.properties
           
