--- a/.github/workflows/wemeet-backend-cd.yml
+++ b/.github/workflows/wemeet-backend-cd.yml
@@ -40,8 +40,7 @@ jobs:
 
       - name: make properties files
         run: |
-          mkdir src/main/resources
-          cd src/main/resources
+          mkdir -p src/main/resources
           echo "${{ secrets.APPLICATION_PROPERTIES }}" > ./src/main/resources/application.properties
           echo "${{ secrets.REDIS_PROPERTIES }}" > ./src/main/resources/redis.properties
         
